--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,8 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "Ubuntu",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:jammy",
-	"features": {
-		"ghcr.io/devcontainers/features/rust:1": {},
-		"devwasm.azurecr.io/dev-wasm/dev-wasm-feature/rust-wasi:0": {}
-	},
+	"name": "AoC2015",
+	"image": "docker.io/library/rust:1.69.0-bullseye",
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -23,11 +18,11 @@
 				"rust-lang.rust-analyzer",
 				"albert.TabOut",
 				"ms-vscode.test-adapter-converter",
-				"hbenl.vscode-test-explorer"
+				"hbenl.vscode-test-explorer",
+				"aaron-bond.better-comments"
 			]
 		}
 	}
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
