--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 digest = "~0.10.0"
 md-5 = "~0.10.0"
-
+serde =  {version = "^1.0.0", features = ["derive"]}
+serde_json = "^1.0.0"
