--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ digest = "~0.10.0"
 md-5 = "~0.10.0"
 serde =  {version = "^1.0.0", features = ["derive"]}
 serde_json = "^1.0.0"
+itertools = "^0.10.0"
